# Solar-System-OpenGL

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
453-skeleton/: 453-skeleton.vcxproj  453-skeleton.vcxproj.filters  GLDebug.cpp  GLDebug.h  GLHandles.cpp  GLHandles.h  Geometry.h  Log.h  Planet.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  SimpleCamera.h  Texture.cpp  Texture.h  Window.cpp  Window.h  main.cpp
453-skeleton/shaders/: sun.frag  sun.vert  test.frag  test.vert
